2009-08-22  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify interface to memory allocation.

	This changeset reinstates `malloc' and others as "regular" C
	functions, implemented as wrappers that delegate a call to
	`dlmalloc' etc via an exclusive place.
	
	* lib/src/callgate.h,		
	* lib/src/malloc_wrappers.c: New. Protect `dlmalloc' and others
	via a mutex place.

	* lib/mtalpha.mk: Update accordingly. Compile `malloc.c' with
	USE_DL_PREFIX.

	* lib/include/cmalloc.h,
	* lib/include/sac_helpers.h,
	* lib/tests/malloc/m1.c,
	* lib/tests/malloc/m2.c: Simplify.

2009-08-21  Simon Polstra <s.polstra@uva.nl>

        Added test for an externally defined thread with a single
	parameter. 

	* tools/tests/1_create/x_extcreate2.sl

2009-08-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend test suite.
	
	* tools/tests/8_funs/ochar.c: New.

2009-08-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notices.

	* programs/benchmarks/livermore/k2-alt.c,
	* programs/benchmarks/livermore/k4-alt.c,
	* programs/demo/bitblt.c,
	* programs/demo/keyblit.c,
	* tools/lib/host-host-ptl/slrt.c,
	* tools/lib/host-host-seqc/lib_main.c,
	* tools/lib/host-host-seqc/load.c,
	* tools/lib/host-host-seqc/main.c,
	* tools/lib/host-host-seqc/slrt.c,
	* tools/lib/mtalpha-sim/main.c: Update header.

2009-08-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	One more little step towards C: support `main'.
	
	* tools/lib/mtalpha-sim/slrt.s: Print the return value of `main'
	before exiting, if it is not zero.

	* tools/tests/8_funs/main1.c,
	* tools/tests/8_funs/main2.c,	
	* tools/tests/8_funs/x_main.c: New. These check that the compiler
	supports `main' decently.

2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/tests/8_funs/f8.c: Use types correctly.

2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge the following changes.

	2009-08-19  Raphael 'kena' Poss  <r.c.poss@uva.nl>
	
	* tools/lib/mtalpha-sim/callgate.s: Simplify. 
